Init angular
First commit:
- model
- services
- other components